--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
     <script src="main.js"></script>
     <script>
 
+      // String
+
+      // var arr = ['Jane', 'John', 'Mike'];
+      //
+      //   for (var i = 0; i < arr.length; i++) {
+      //     console.log('New massege from ' + arr[i]);
+      //   }
+      //
+      //   arr.forEach(function(name){
+      //     console.log('New massege from ' + name);
+      //   });
+
+      var arr = ['http:/', 'mydomain.com', 'mypage.html','#someanchor'];
+        console.log(arr.join('/'));
+
+        var arr = ['I', 'dont', 'like','Java'];
+
+
+          console.log(arr.slice(1));
+
+
+
+      // // Arrays
+      //
+      // var arr = [1, 2, 3];
+      //
+      //   arr.forEach(function(item){
+      //     var a = item + 2;
+      //     console.log(a);
+      //   })
+      // var arr2 = new Array(10);
+      // var a = arr.length;
+      // console.log(a);
+      //
+      // arr[5] =6;
+
+      // arr.push(4);
+
+      // console.log(arr[3]);
+
+
+
+
+
     // var size = 8;
     // var str = '';
     //
