--- a/chess&rise.html
+++ b/chess&rise.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JS</title>
+  <title>chess&rise</title>
   <meta charset="utf-8">
 </head>
   <body>
-    <script src="main.js"></script>
+
     <script>
 
         //task chess and rise
 
-var price = prompt ('Ведите текщий курс: ', 26) ;
+
+var price = prompt ('Ведите цену за 1 тн риса в $: ', 100) ;
 var rise = 1;
 var weight = 0.065;
+var weighttn = weight * 1000000;
 var n = 64;
 
 for(var i = 1; i <= n; i++){
@@ -24,12 +26,13 @@ console.log('Количество рисинок на доске:',rise);
 
 // расчитываем вес риса
 weight_rise = rise * weight;
-console.log('Общий вес риса в граммах',weight_rise);
-console.log('Общий вес риса в тоннах',weight_rise / 1000000);
+
+// console.log('Общий вес риса в граммах',weight_rise);
+console.log('Общий вес риса в тоннах',weighttn);
 //расчитываем соимость риса из расчета $1 за 1 грамм
-price_rise = price * weight_rise;
-console.log('Стоимость риса в $ при цене 1гр=$1', price_rise);
-console.log('Стоимость риса в млн $ при цене 1гр=$1', price_rise / 1000000);
+price_rise = price * weighttn;
+// console.log('Стоимость риса в $ при цене 1гр=$1', price_rise);
+console.log('Стоимость при цене ' + price + '$ за тонну', price_rise);
 
 
     </script>
