--- a/index.html
+++ b/index.html
@@ -8,6 +8,160 @@
 
     <script>
 
+    // var message = 'Hello';
+    // function greeting(name){
+    //   console.log(message + ' ' + name);
+    // }
+    // greeting('Jane');
+    // message = 'Godbye';
+    // greeting ('Jane')
+
+    // function min(a, b){
+    //   if (a < b) {
+    //     return b;
+    //   }
+    //   else if (a===b){
+    //     console.log('a an b are equal');
+    //     return a;
+    //   }
+    //   else {
+    //     return a;
+    //   }
+    // }
+    // var c = min(13, 13);
+    // console.log(c);
+
+    function sum(a, b){
+      return a + b;
+
+    }
+    var d = sum (10, 15)
+    console.log(d);
+
+
+
+    // function counter(n){
+    //     if (n == 1) return 1;
+    //     return n + counter (n-1);
+    //
+    //     }
+      //   var sum = 0;
+      //   for (var i = 0; i <= n; i++) {
+      //     sum += i;
+      //   }
+      //   return sum;
+      // }
+      // var a = counter(45);
+      // console.log(a);
+
+      // рекурсия
+      // var i = 0;
+      // function counter(){
+      //   console.log(i);
+      //   i+=1;
+      //   if (i == 5) {
+      //     console.log('Finished');
+      //   }
+      //   else {
+      //     counter();
+      //   }
+      // }
+      // counter();
+
+
+
+
+
+      // settimeout(function checkAge(age){
+      //   var msg = (age > 18) ? 'Confirmation' : 'Rejection';
+      //   console.log(msg);
+      // }, 1000);
+      //   checkAge(21);
+      //   checkAge(1);
+
+
+
+      // var foo = function(){
+      //   alert('Hello');
+      // }
+      // foo();
+
+      // function foo(name){
+      //
+      //
+      //   if (name == undefined) {
+      //     name = 'Stranger';
+      //   }
+      //
+      //    alert('Hello' + name);
+      // }
+      // foo();
+
+
+
+      // var m = [2, 4, 1, 5, 7, 6, 8, 3, 9, 10];
+      //
+      //
+      // for (var i = 0; i < 9; i++) {
+      //     var m_min = m[i];
+      //     console.log(m[i]);
+      //     for (var j = i + 1; j < 10; j++)
+      //      { console.log(m[j])
+      //         if (m[j] < m_min) {
+      //             var mm = m[i];
+      //             m_min = m[j];
+      //             m[i] = m_min;
+      //             m[j] = mm;
+      //         }
+      //     }
+      // }
+      // console.log(m);
+
+//       var m = [1, 2, 3, 4, 10, 6, 7, 8, 9, 5];
+//  var count = m.length-1;
+// for (var i = 0; i < count; i++)
+//      for (var j = 0; j < count-i; j++)
+//         if (m[j]> m[j+1]) {
+//            var max = m[j];
+//            m[j] = m[j+1];
+//            m[j+1] = max;
+//         }
+// document.write(m);
+
+
+      // arr.sort(function(a, b){return a-b});
+
+
+
+      // var arr = [2, 4, 1, 5, 7, 6, 8, 3, 9, 10];
+      // var arr2 = ['a', 'b', 'c'];
+      //
+      //
+      // var arr3 = arr.concat(arr2);
+      // console.log(arr3);
+      // var arr4 = arr2.concat(arr);
+      // console.log(arr4);
+      // // console.log(arr.reverse(arr));
+      // // delete arr(1);
+      // // console.log(arr);
+      // var copy = arr.slice(2,5);
+      // console.log(copy);
+      // arr.splice(-1, 0, 3, 4, 5);
+      // console.log(arr);
+
+
+      // var arr = [[1, 2],[3, 4]];
+      // var sum = 0;
+      // for (var i = 0; i < arr.length; i++) {
+      //   console.log(sum);
+      //   for (var j = 0; j < arr[i].length; j++) {
+      //     sum += arr[i][j];
+      //   }
+      //
+      // }
+      // console.log(sum);
+
+
       // String
 
       // var arr = ['Jane', 'John', 'Mike'];
@@ -20,14 +174,14 @@
       //     console.log('New massege from ' + name);
       //   });
 
-      var arr = ['http:/', 'mydomain.com', 'mypage.html','#someanchor'];
-        console.log(arr.join('/'));
-
-        var arr = ['I', 'dont', 'like','Java'];
-         
-
-
-          console.log(arr.slice(1));
+      // var arr = ['http:/', 'mydomain.com', 'mypage.html','#someanchor'];
+      //   console.log(arr.join('/'));
+      //
+      //   var arr = ['I', 'dont', 'like','Java'];
+      //
+      //
+      //
+      //     console.log(arr.slice(1));
 
 
 
