1-part of homework 04/28/18

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     // var c = min(13, 13);
     // console.log(c);
 
-    function sum(a, b){
-      return a + b;
-
-    }
-    var d = sum (10, 15)
-    console.log(d);
+    // function sum(a, b){
+    //   return a + b;
+    //
+    // }
+    // var d = sum (10, 15)
+    // console.log(d);
 
 
 
