--- a/homework_28_04.html
+++ b/homework_28_04.html
@@ -42,9 +42,30 @@
       if (n >= 40) {
         alert('Для этой функции предел слишком большой! Страничка может подвиснуть. Уверены?');
       }
+
     document.write( 'Число Фибоначчи до ' + (n) +' равно: ' +  fib(n) + ' (подробное вычисление см. в консоли)' );
 
     </script>
+
+<h2>2. Вычислить факториал заданного числа с помощью функции.</h2>
+    <script>
+      var n = prompt('Введите число для расчета факториала: ', 5)
+
+        function factorial(n) {
+          return (n != 1) ? n * factorial(n - 1) : 1;
+        }
+        document.write('Факториал числа ' + n +' равен: ' + factorial(n));
+    </script>
+
+    <h2>3. Счетчик (counter) функция.</h2>
+        <script>
+
+        </script>
+
+        <h2>4. Функция расчета квадратного корня.</h2>
+            <script>
+
+            </script>
 
   </body>
 
