--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
     <script>
 
+    var age = prompt('возраст?', 18);
+
+  var message = (age < 3) ? 'Здравствуй, малыш!' :
+  (age < 18) ? 'Привет!' :
+  (age < 100) ? 'Здравствуйте!' :
+  'Какой необычный возраст!';
+  
+
+  alert( message );
     // var message = 'Hello';
     // function greeting(name){
     //   console.log(message + ' ' + name);
