--- a/homework_28_04.html
+++ b/homework_28_04.html
@@ -53,11 +53,11 @@
 
         function factorial(n) {
           //return (n != 1) ? n * factorial(n - 1) : 1;
-          if (n != 1) {
-            return (n * factorial(n - 1));
+          if (n > 1) {
+            return n * factorial(n - 1);
           }
           else {
-          return n == 1;
+          return 1 ;
           }
         }
         document.write('Факториал числа ' + n +' равен: ' + factorial(n));
