--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
 
     <script>
 
-    let q = (m) => {
-    const quaters = ["Первая","Вторая","Третья","Четвертая"];
-    return quaters[~~(m/15)];
-    };
-    console.log(m);
+    // var a = prompt('Enter a number', a)
+    //
+    // if (a%2 == 0 && a%5 == 0) {
+    //   console.log('true');
+    // }
+    // else {
+    //   console.log('false');
+    // }
+
+
+    // var array = {
+    //   en: ['blue', 'red', 'green'];
+    //   ru: ['голубой', 'красный' 'зеленый'];
+    //
+    //   console.log(array.);
+    //
+
+
 
 
     //
