--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
     <script>
 
-    // var a = prompt('Enter a number', a)
-    //
-    // if (a%2 == 0 && a%5 == 0) {
-    //   console.log('true');
-    // }
-    // else {
-    //   console.log('false');
-    // }
+    var a = prompt('Enter a number', a)
+
+    if (a%2 == 0 && a%5 == 0) {
+      console.log('true');
+    }
+    else {
+      console.log('false');
+    }
 
 
     // var array = {
