--- a/index.html
+++ b/index.html
@@ -8,28 +8,64 @@
 
     <script>
 
-    'use strict';
-      function CoffeeMachine(power) {
-        this.waterAmount = 0;
+    /************** Clock*********/
+    function Clock(options) {
+  this._template = options.template;
+}
 
-        var WATER_HEAT_CAPACITY = 4200;
+Clock.prototype._render = function() {
+  var date = new Date();
 
-        var self = this;
-        var timerId
+  var hours = date.getHours();
+  if (hours < 10) hours = '0' + hours;
 
-        function getBoilTime() {
-          return self.waterAmount * WATER_HEAT_CAPACITY * 80 / power;
-        }
+  var min = date.getMinutes();
+  if (min < 10) min = '0' + min;
 
-        function onReady() {
-          alert( 'Кофе готово!' );
-        }
+  var sec = date.getSeconds();
+  if (sec < 10) sec = '0' + sec;
 
-        this.run = function() {
-          setTimeout(onReady, getBoilTime());
-        };
+  var output = this._template.replace('h', hours).replace('m', min).replace('s', sec);
 
-      }
+  console.log(output);
+};
+
+Clock.prototype.stop = function() {
+  clearInterval(this._timer);
+};
+
+Clock.prototype.start = function() {
+  this._render();
+  var self = this;
+  this._timer = setInterval(function() {
+    self._render();
+  }, 1000);
+};
+
+    /**********************coffeeMachine***********/
+
+    // 'use strict';
+    //   function CoffeeMachine(power) {
+    //     this.waterAmount = 0;
+    //
+    //     var WATER_HEAT_CAPACITY = 4200;
+    //
+    //     var self = this;
+    //     var timerId
+    //
+    //     function getBoilTime() {
+    //       return self.waterAmount * WATER_HEAT_CAPACITY * 80 / power;
+    //     }
+    //
+    //     function onReady() {
+    //       alert( 'Кофе готово!' );
+    //     }
+    //
+    //     this.run = function() {
+    //       setTimeout(onReady, getBoilTime());
+    //     };
+    //
+    //   }
 
     // var a = prompt('Enter a number', a)
     //
