--- a/index.html
+++ b/index.html
@@ -8,39 +8,54 @@
 
     <script>
 
+    function makeAdder(x) {
+      return function ( y ) {
+        return x + y;
+      };
+    };
+
+    var add5 = makeAdder(5);
+    console.log(add5);
+    var add10 = makeAdder(10);
+    console.log(add10);
+
+    console.log(add5(5));
+    // console.log(add5(2));  // 7
+    // console.log(add10(2)); // 12
+
     /************** Clock*********/
-    function Clock(options) {
-  this._template = options.template;
-}
-
-Clock.prototype._render = function() {
-  var date = new Date();
-
-  var hours = date.getHours();
-  if (hours < 10) hours = '0' + hours;
-
-  var min = date.getMinutes();
-  if (min < 10) min = '0' + min;
-
-  var sec = date.getSeconds();
-  if (sec < 10) sec = '0' + sec;
-
-  var output = this._template.replace('h', hours).replace('m', min).replace('s', sec);
-
-  console.log(output);
-};
-
-Clock.prototype.stop = function() {
-  clearInterval(this._timer);
-};
-
-Clock.prototype.start = function() {
-  this._render();
-  var self = this;
-  this._timer = setInterval(function() {
-    self._render();
-  }, 1000);
-};
+//     function Clock(options) {
+//   this._template = options.template;
+// }
+//
+// Clock.prototype._render = function() {
+//   var date = new Date();
+//
+//   var hours = date.getHours();
+//   if (hours < 10) hours = '0' + hours;
+//
+//   var min = date.getMinutes();
+//   if (min < 10) min = '0' + min;
+//
+//   var sec = date.getSeconds();
+//   if (sec < 10) sec = '0' + sec;
+//
+//   var output = this._template.replace('h', hours).replace('m', min).replace('s', sec);
+//
+//   console.log(output);
+// };
+//
+// Clock.prototype.stop = function() {
+//   clearInterval(this._timer);
+// };
+//
+// Clock.prototype.start = function() {
+//   this._render();
+//   var self = this;
+//   this._timer = setInterval(function() {
+//     self._render();
+//   }, 1000);
+// };
 
     /**********************coffeeMachine***********/
 
