--- a/index.html
+++ b/index.html
@@ -8,41 +8,30 @@
 
     <script>
 
+    function randomNum() {
+      var num =
+    }
+
     // for (i=1; i<10; i++)
     //   for (j=1; j<10; j++)
     //   log("<p>"+i+"*"+j+" = "+(i*j)+"</p>");
 
-    var table, row, cell, i, j;
-05
-        table = document.createElement('table');
-06
-        table.style.textAlign = 'right';
-07
-        table.style.fontFamily = 'monospace';
-08
-        for (i=1; i<10; i++) {
-09
-            row = document.createElement('tr');
-10
-            for (j=1; j<10; j++) {
-11
-                cell = document.createElement(i == 1 || j == 1 ? 'th' : 'td');
-12
-                cell.appendChild(document.createTextNode(i*j));
-13
-                cell.style.padding = '4px';
-14
-                cell.style.width = 100 / 9 + '%';
-15
-                row.appendChild(cell);
-16
-            }
-17
-            table.appendChild(row);
-18
-        }
-19
-        document.body.appendChild(table);
+    // var table, row, cell, i, j;
+    //     table = document.createElement('table');
+    //     table.style.textAlign = 'right';
+    //     table.style.fontFamily = 'monospace';
+    //     for (i=1; i<10; i++) {
+    //         row = document.createElement('tr');
+    //         for (j=1; j<10; j++) {
+    //             cell = document.createElement(i == 1 || j == 1 ? 'th' : 'td');
+    //             cell.appendChild(document.createTextNode(i*j));
+    //             cell.style.padding = '4px';
+    //             cell.style.width = 100 / 9 + '%';
+    //             row.appendChild(cell);
+    //         }
+    //         table.appendChild(row);
+    //     }
+    //     document.body.appendChild(table);
 
 
 
