--- a/progressbar.html
+++ b/progressbar.html
@@ -6,13 +6,14 @@
 	<meta name="viewport" content="width=device-width; initial-scale=1;">
 	<!-- <link rel="stylesheet" href="css/all.css" type="text/css"/> -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-	<title>To do list</title>
+	<title>PROGRESSBAR</title>
 	<style>
 
 		.progressbar{
 			height: 16px;
 			width: 200px;
 			background-color:  #e2e2e2;
+			margin-top: 50px;
 		}
 		.progress{
 			height: 100%;
@@ -25,11 +26,18 @@
 
 
 
-<div class="progressbar" data-value='70'>
+<div class="progressbar" data-value='90'>
 	<div class="progress"></div>
 	<span>0%</span>
 </div>
-
+<div class="progressbar" data-value='60'>
+	<div class="progress"></div>
+	<span>0%</span>
+</div>
+<div class="progressbar" data-value='30'>
+	<div class="progress"></div>
+	<span>0%</span>
+</div>
 <script>
 
 var progressbar = document.getElementsByClassName('progressbar')[0];
