update JS files

--- a/index.html
+++ b/index.html
@@ -3,19 +3,25 @@
 <head>
   <title>JS</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="main.css" type="text/css"/>
 </head>
   <body>
 
+  <div
+
+
+
+
     <script>
 
-<<<<<<< HEAD
-    function randomNum() {
-      var num =
-    }
-
-    // for (i=1; i<10; i++)
-    //   for (j=1; j<10; j++)
-    //   log("<p>"+i+"*"+j+" = "+(i*j)+"</p>");
+// <<<<<<< HEAD
+//     function randomNum() {
+//       var num =
+//     }
+//
+//     // for (i=1; i<10; i++)
+//     //   for (j=1; j<10; j++)
+//     //   log("<p>"+i+"*"+j+" = "+(i*j)+"</p>");
 
     // var table, row, cell, i, j;
     //     table = document.createElement('table');
